@@ -1,5 +1,16 @@
 2009-11-05  Ivan Maidanski <ivmai@mail.ru>
 
+	* win32_threads.c (GC_please_stop): If DllMain-based thread
+	registration is not compiled in then define GC_please_stop as
+	a non-volatile variable for assertion only.
+	* win32_threads.c (GC_stop_world): Set and clear only if defined.
+	* win32_threads.c (GC_stop_world): Add the comment for GC_printf()
+	usage (while holding GC_write_cs).
+	* win32_threads.c (GC_delete_gc_thread): Ditto.
+	* os_depc.c (GC_remove_protection): Ditto.
+
+2009-11-05  Ivan Maidanski <ivmai@mail.ru>
+
 	* pthread_support.c (GC_inner_start_routine): Join 3 sequential
 	GC_printf() calls into a single one (for DEBUG_THREADS).
 
